<resources>
    <string name="app_name">FinalProject</string>
    <string name="title_home">Home</string>
    <string name="list">List</string>
    <string name="add">Add</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_read_books">Show Read Books</string>
    <string name="hide_read_books">Hide Read Books</string>
    <string name="title">[TITLE]</string>
    <string name="author">[AUTHOR]</string>
    <string name="genre_one">[GENRE ONE]</string>
    <string name="genre_two">[GENRE TWO]</string>
    <string name="summary">[SUMMARY]</string>
    <string name="mark_as_read">Mark as Read</string>
    <string name="delete_book">Delete Book</string>
</resources>