<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:id="@+id/fragment_viewbookinfo">


    <TextView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="34sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/authorView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textAlignment="center"
        android:layout_marginTop="8dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleView" />

    <TextView
        android:id="@+id/genre1View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre_one"
        android:textAlignment="center"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/genre2View"
        app:layout_constraintBottom_toBottomOf="@id/genre2View"
        app:layout_constraintTop_toBottomOf="@id/authorView" />

    <TextView
        android:id="@+id/genre2View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/genre_two"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.535"
        app:layout_constraintStart_toEndOf="@id/genre1View"
        app:layout_constraintTop_toTopOf="@id/genre1View" />

    <TextView
        android:id="@+id/summaryView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/summary"
        android:justificationMode="inter_word"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genre1View" />


    <CheckBox
        android:id="@+id/markAsRead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mark_as_read"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/deleteButton"
        app:layout_constraintTop_toBottomOf="@+id/summaryView" />
    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_book"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/button"
        app:layout_constraintStart_toEndOf="@+id/markAsRead"
        app:layout_constraintTop_toTopOf="@+id/markAsRead"/>

</androidx.constraintlayout.widget.ConstraintLayout>